<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/progress_circular1"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="92dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/progress_circular2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/progress_circular2"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="91dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progress_circular1"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="246dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="10dp"
        android:text="@string/led1"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="246dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="10dp"
        android:text="@string/led2"
        app:layout_constraintBottom_toTopOf="@+id/switch3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="295dp"
        android:layout_marginEnd="246dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="10dp"
        android:text="@string/led3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/nhi_t"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_circular1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="479dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:text="@string/m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/progress_circular2" />

</android.support.constraint.ConstraintLayout>